# dkml-c-probe

./: .gitattributes  .gitignore  CHANGES.md  CONTRIBUTORS.md  README.md  dkml-c-probe.opam  dkml-c-probe.opam.template  dune  dune-project  show_abi.ml  show_signature.ml
.github/workflows/: pages.yml  test.yml
samples/: crosscompiling-opam-installer.sh  discover.ml  dune  show_abi.ml  show_abi_signature.ml  show_conf_signature.ml
src/: c_conf.ml  c_conf.mli  dkml_c_probe.ml  dune  index.mld
src/common/: dune  probe_common.ml  test_dos2unix.ml  test_normalize_into_upper_alnum.ml
src/config/: create_ocaml_from_file.ml  discover.ml  dkml_compiler_probe.h  dune
src/tests/: dune  test_c_conf.ml
