(mdx)

(rule
 (deps src/config/dkml_compiler_probe.h)
 (target dkml_compiler_probe.h)
 (action (copy %{deps} %{target})))

; Diagnostics. Use (universe) to always display it.
(rule
 (alias runtest)
 (deps (package dkml-c-probe) (universe))
 (action
   (with-stdin-from
     show_abi.ml
     (run ocaml))))

; BEGIN HACK - Workaround unsupported ```console blocks
(rule
 (deps README.md)
 (target README.md.sh)
 (action
  (with-stdout-to
   %{target}
   (run sed "s/```console/```sh/g" %{deps}))))
(rule
 (deps (:in README.md.sh) show_signature.ml dkml_compiler_probe.h)
 (target README.md.sh.corrected)
 (action
  (run ocaml-mdx test --force-output %{in})))
(rule
 (deps README.md.sh.corrected)
 (target README.md.corrected)
 (action
  (with-stdout-to
   %{target}
   (run sed "s/```sh/```console/g" %{deps}))))
(rule
 (alias runmarkdown)
 (action
  (progn
   (diff README.md README.md.corrected))))
; END HACK
